# agent-tui

./: CHANGELOG.md  Cargo.toml  README.md
.github/pipelines/: ci.yml  release.yml
.github/scripts/: changelog-extract.sh
.github/workflows/: build.yml  ci.yml  release.yml  reusable-build.yml  stage-build.yml  stage-release-publish.yml  stage-test.yml
src/: main.rs
