[package]
name = "agent-tui"
version = "0.1.1"
edition = "2024"

[dependencies]
async-nats = "0.49.1"
chrono = "0.4.45"
crossterm = "0.29.0"
futures = "0.3.32"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
